crates/mdt_cli/tests/snapshots/snapshots__update_verbose_up_to_date.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpu17OCg
    - "--verbose"
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 2 provider(s), 3 consumer(s)
  Providers:
    @apiDocs ([TEMP_DIR]/template.t.md)
    @installGuide ([TEMP_DIR]/template.t.md)
All consumer blocks are already up to date.

----- stderr -----
