crates/mdt_cli/tests/snapshots/snapshots__validation_errors_check.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp1bV4Vj
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unclosed.md:3:1: missing closing tag for block `valid_block`
error: validation errors found
